<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Point Scorer</string>

    <string name="initial_points">Initial points</string>
    <string name="min_max_points">[-9999, 9999]</string>

    <string name="one_player">One player</string>
    <string name="two_players">Two players</string>
    <string name="three_players">Three players</string>
    <string name="four_players">Four players</string>
    <string name="five_players">Five players</string>
    <string name="six_players">Six players</string>
    <string name="seven_players">Seven players</string>
    <string name="eight_players">Eight players</string>

    <string name="player_name">Player name</string>
    <string name="player_1_name">Player 1</string>
    <string name="player_2_name">Player 2</string>
    <string name="player_3_name">Player 3</string>
    <string name="player_4_name">Player 4</string>
    <string name="player_5_name">Player 5</string>
    <string name="player_6_name">Player 6</string>
    <string name="player_7_name">Player 7</string>
    <string name="player_8_name">Player 8</string>

    <string name="player_options">Player options</string>
    <string name="player_1_options">Player 1 options</string>
    <string name="player_2_options">Player 2 options</string>
    <string name="player_3_options">Player 3 options</string>
    <string name="player_4_options">Player 4 options</string>
    <string name="player_5_options">Player 5 options</string>
    <string name="player_6_options">Player 6 options</string>
    <string name="player_7_options">Player 7 options</string>
    <string name="player_8_options">Player 8 options</string>

    <string name="animate_points">Animate points</string>
    <string name="restore_points">Restore points</string>
    <string name="error_initial_points">Please enter a number between -9999 and 9999</string>
    <string name="error_min_points">Must be higher than -10.000</string>
    <string name="error_max_points">Must be lower than 10.000</string>
    <string name="restore_all_points">Restore all points</string>
    <string name="restore_all_names">Restore all names</string>
    <string name="restore_all_colors">Restore all colors</string>
    <string name="restore_all_backgrounds">Restore all backgrounds</string>
    <string name="restore_everything">Restore everything</string>
    <string name="all_players_points_restored">All players points restored</string>
    <string name="all_players_names_restored">All players names restored</string>
    <string name="all_players_colors_restored">All players colors restored</string>
    <string name="all_players_backgrounds_restored">All players backgrounds restored</string>
    <string name="everything_restored">Everything restored</string>
    <string name="close">Close</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="restore_game_points_confirmation">This will restore everyone\'s points in this screen to %d.</string>
    <string name="restart_x_points_to_y">This will restore %s points to %d</string>
    <string name="your">your</string>
    <string name="ok" tools:override="true">OK</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="info">Info</string>
    <string name="initial_points_help">Are the default points for each player.\n\nThe \"Restore all points\" button will restore every player on every screen to this value.</string>
    <string name="watch_an_ad">❤️  Watch an Ad  ❤️</string>
    <string name="ups">Ups! Something went wrong, sorry!</string>
    <string name="ups_but_thanks">Ups! Something went wrong, but your intention is what matters, thanks!</string>
    <string name="an_ad_will_appear_in_few_seconds">An ad will appear in few seconds</string>
    <string name="tap_anywhere_to_cancel">Tap anywhere to cancel</string>
    <string name="change_background">Change background</string>
    <string name="restore_background">Restore background</string>
    <string name="settings">Settings</string>
    <string name="thanks_and_reward">Thanks! As reward you won\'t see small ads during this session ;)</string>
    <string name="thanks">Thanks!</string>

</resources>
