<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".aMainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/initial_points"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:textColorHint="@android:color/black">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tietMainInitialPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:text="50"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btOnePlayer"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_white_wood_bg"
            android:contentDescription="@string/one_player"
            android:padding="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_one_player"
            android:tint="@android:color/black"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/btTwoPlayers"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_white_wood_bg"
            android:contentDescription="@string/two_players"
            android:padding="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_two_players"
            android:tint="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btThreePlayers"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_white_wood_bg"
            android:contentDescription="@string/three_players"
            android:padding="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_three_players"
            android:tint="@android:color/black"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/btFourPlayers"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_white_wood_bg"
            android:contentDescription="@string/four_players"
            android:padding="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_four_players"
            android:tint="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btFivePlayers"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_white_wood_bg"
            android:contentDescription="@string/five_players"
            android:padding="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_five_players"
            android:tint="@android:color/black"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/btSixPlayers"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_white_wood_bg"
            android:contentDescription="@string/six_players"
            android:padding="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_six_players"
            android:tint="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btSevenPlayers"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_white_wood_bg"
            android:contentDescription="@string/seven_players"
            android:padding="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_seven_players"
            android:tint="@android:color/black"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:id="@+id/btEightPlayers"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect_white_wood_bg"
            android:contentDescription="@string/eight_players"
            android:padding="48dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_eight_players"
            android:tint="@android:color/black" />

    </LinearLayout>

</LinearLayout>