<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.main.fragments.MenuFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_points"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:theme="@style/MyTextInputLayout" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMainInitialPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:digits="-0123456789"
                android:gravity="center"
                android:hint="@string/min_max_points"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:theme="@style/MyTextInputLayout"
                tools:text="9999" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acbMainResetAllPoints"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:background="@color/red"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/reset_all"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btMain1Player"
                    style="@style/MainButton"
                    android:contentDescription="@string/one_player"
                    app:srcCompat="@drawable/ic_one_player" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbMain1Player"
                    style="@style/MainButtonProgressBar"
                    tools:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btMain2Player"
                    style="@style/MainButton"
                    android:contentDescription="@string/two_players"
                    app:srcCompat="@drawable/ic_two_players" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbMain2Player"
                    style="@style/MainButtonProgressBar"
                    tools:visibility="visible" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btMain3Player"
                    style="@style/MainButton"
                    android:contentDescription="@string/three_players"
                    app:srcCompat="@drawable/ic_three_players" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbMain3Player"
                    style="@style/MainButtonProgressBar"
                    tools:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btMain4Player"
                    style="@style/MainButton"
                    android:contentDescription="@string/four_players"
                    app:srcCompat="@drawable/ic_four_players" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbMain4Player"
                    style="@style/MainButtonProgressBar"
                    tools:visibility="visible" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btMain5Player"
                    style="@style/MainButton"
                    android:contentDescription="@string/five_players"
                    app:srcCompat="@drawable/ic_five_players" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbMain5Player"
                    style="@style/MainButtonProgressBar"
                    tools:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btMain6Player"
                    style="@style/MainButton"
                    android:contentDescription="@string/six_players"
                    app:srcCompat="@drawable/ic_six_players" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbMain6Player"
                    style="@style/MainButtonProgressBar"
                    tools:visibility="visible" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btMain7Player"
                    style="@style/MainButton"
                    android:contentDescription="@string/seven_players"
                    app:srcCompat="@drawable/ic_seven_players" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbMain7Player"
                    style="@style/MainButtonProgressBar"
                    tools:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:ignore="NestedWeights">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btMain8Player"
                    style="@style/MainButton"
                    android:contentDescription="@string/eight_players"
                    app:srcCompat="@drawable/ic_eight_players" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/pbMain8Player"
                    style="@style/MainButtonProgressBar"
                    tools:visibility="visible" />

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>