<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvRestoreAllPointsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/are_you_sure"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <FrameLayout
        android:id="@+id/flRestoreAllPointsMediumRectangleAdContainer"
        android:layout_width="300dp"
        android:layout_below="@+id/tvRestoreAllPointsTitle"
        android:layout_height="250dp"
        android:gravity="center"
        android:layout_gravity="center_vertical" />

    <TextView
        android:id="@+id/tvRestoreAllPointsMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flRestoreAllPointsMediumRectangleAdContainer"
        android:layout_alignEnd="@+id/flRestoreAllPointsMediumRectangleAdContainer"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:lineSpacingMultiplier="1.3"
        tools:text="@string/this_will_restore_all_points_to_"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/btRestoreAllPointsCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/tvRestoreAllPointsMessage"
        android:layout_toStartOf="@+id/btRestoreAllPointsOk"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btRestoreAllPointsOk"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/tvRestoreAllPointsMessage"
        android:layout_alignEnd="@+id/flRestoreAllPointsMediumRectangleAdContainer"
        android:text="@string/ok"
        android:textColor="@color/colorAccent" />

</RelativeLayout>